CSS: Fix props height being clipped to 300px

--- a/bin/style.css
+++ b/bin/style.css
@@ -435,7 +435,6 @@ input[type=checkbox]:checked:after {
 }
 /* Properties */
 .hide-properties {
-  flex: 0 0 300px;
   padding: 10px;
   overflow: auto;
   padding-bottom: 80px;
